# sigslot

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
.github/workflows/: cmake.yml  unit-tests.yml
cmake/: PalSigslotConfig.cmake.in  SigslotUtils.cmake
example/: CMakeLists.txt  arguments.cpp  basic.cpp  connection.cpp  default-arguments.cpp  disconnection.cpp  lambdas.cpp  overloads.cpp  slot-group.cpp
include/sigslot/: connection.hpp  signal.hpp
include/sigslot/adapter/: boost.hpp  qt.hpp
include/sigslot/detail/: mutex.hpp  slot.hpp  util.hpp
include/sigslot/detail/traits/: function.hpp  pointer.hpp  typelist.hpp  util.hpp
test/: CMakeLists.txt  bench-slots.cpp  boost-tracking.cpp  copies.cpp  function-traits.cpp  observer.cpp  pmf-disconnection.cpp  qt-tracking.cpp  recursive.cpp  signal-exceptions.cpp  signal-extended.cpp  signal-interface.cpp  signal-performance.cpp  signal-pmf.cpp  signal-threaded.cpp  signal-tracking.cpp  signal.cpp  slots-groups.cpp  spy.cpp  test-common.h  typelist-traits.cpp
